# observa

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  docker-compose.macos.yml  docker-compose.yml  observa.toml  run-docker.sh
assets/css/: observa.css
assets/js/: observa.js  three-viz.js
crates/observa-bus/: AGENTS.md  Cargo.toml
crates/observa-bus/src/: lib.rs
crates/observa-bus/tests/: bus_test.rs
crates/observa-cache/: AGENTS.md  Cargo.toml
crates/observa-cache/src/: lib.rs
crates/observa-cache/tests/: cache_test.rs
crates/observa-cli/: AGENTS.md  Cargo.toml
crates/observa-cli/src/: main.rs
crates/observa-collector/: AGENTS.md  Cargo.toml
crates/observa-collector/src/: ai_scanner.rs  collector.rs  lib.rs  normalize.rs
crates/observa-collector/tests/: collector_test.rs
crates/observa-config/: AGENTS.md  Cargo.toml
crates/observa-config/src/: cli.rs  config.rs  lib.rs  shutdown.rs
crates/observa-config/tests/: config_test.rs
crates/observa-db/: AGENTS.md  Cargo.toml
crates/observa-db/migrations/: 20260707000001_initial.sql  20260708000001_add_security_to_logs.sql  20260709000001_add_retention_meta.sql  20260711000001_create_security_alerts.sql
crates/observa-db/src/: chat.rs  lib.rs  logs.rs  metrics.rs  pool.rs  security.rs
crates/observa-db/tests/: db_test.rs
crates/observa-ingestor/: AGENTS.md  Cargo.toml
crates/observa-ingestor/src/: lib.rs  parser.rs  reader.rs
crates/observa-ingestor/tests/: ingestor_test.rs
crates/observa-llm/: AGENTS.md  Cargo.toml
crates/observa-llm/src/: client.rs  fallback.rs  lib.rs  stream.rs
crates/observa-llm/tests/: llm_test.rs
crates/observa-server/: AGENTS.md  Cargo.toml
crates/observa-server/src/: api.rs  auth.rs  background.rs  chat.rs  insight.rs  lib.rs  llm.rs  llm_sanitize.rs  paths.rs  ports.rs  rate_limit.rs  state.rs  store.rs  tpe.rs
crates/observa-server/src/routes/: mod.rs  params.rs  view.rs
crates/observa-server/tests/: integration.rs  server_test.rs
crates/observa-shared/: AGENTS.md  Cargo.toml
crates/observa-shared/src/: error.rs  lib.rs  types.rs
crates/observa-shared/tests/: types_test.rs
templates/: AGENTS.md  about.html  ai_servers.html  base.html  chat.html  index.html  login.html  logs.html  metrics.html  network.html  processes.html  security.html  status.html  storage.html  unauthorized.html
templates/partials/: ai_server_cards.html  chat_messages.html  chat_reply.html  chat_sessions.html  log_rows.html  metrics_raw_table.html  metrics_summary.html  metrics_table.html  network_cards.html  process_cards.html  security_rows.html  storage_cards.html
