[package]
name = "observa-bus"
version = "0.1.0"
edition = "2021"

[features]
default = []
axum = ["dep:axum"]

[dependencies]
observa-shared = { path = "../observa-shared" }
tokio = { version = "1", features = ["sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
axum = { version = "0.8", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
chrono = { version = "0.4", features = ["serde"] }
http-body-util = "0.1"
observa-bus = { path = ".", features = ["axum"] }
