[package]
name = "observa-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
observa-shared = { path = "../observa-shared" }
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.29", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
