[package]
name = "observa-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
observa-shared = { path = "../observa-shared" }
observa-db = { path = "../observa-db" }
observa-cache = { path = "../observa-cache" }
observa-bus = { path = "../observa-bus" }
sysinfo = "0.34"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
