[package]
name = "observa-config"
version = "0.1.0"
edition = "2021"

[dependencies]
observa-shared = { path = "../observa-shared" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
figment = { version = "0.10", features = ["env", "toml"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "6.0.0"

[dev-dependencies]
tempfile = "3"
