[package]
name = "observa-ingestor"
version = "0.1.0"
edition = "2021"

[dependencies]
observa-shared = { path = "../observa-shared" }
observa-db = { path = "../observa-db" }
observa-cache = { path = "../observa-cache" }
observa-bus = { path = "../observa-bus" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
