[package]
name = "observa-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
futures-core = "0.3"
observa-shared = { path = "../observa-shared" }
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tokio-stream = "0.1"
tracing = "0.1"

[dev-dependencies]
axum = { version = "0.8", default-features = false, features = ["tokio", "http1", "json"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tokio-test = "0.4"
