[package]
name = "observa-server"
version = "0.1.0"
edition = "2021"

[dependencies]
observa-shared = { path = "../observa-shared" }
observa-config = { path = "../observa-config" }
observa-bus = { path = "../observa-bus", features = ["axum"] }
observa-db = { path = "../observa-db" }
observa-cache = { path = "../observa-cache" }
observa-llm = { path = "../observa-llm" }
axum = { version = "0.8", default-features = false, features = ["tokio", "http1", "json", "query", "original-uri", "form"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", features = ["fs", "trace", "limit"] }
tera = { version = "1.20", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tracing = "0.1"
tokio-stream = "0.1"
parking_lot = "0.12"
rand = "0.8"
uuid = { version = "1.11", features = ["v4", "serde"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
urlencoding = "2"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
http-body-util = "0.1"
observa-collector = { path = "../observa-collector" }
observa-ingestor = { path = "../observa-ingestor" }
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
chrono = { version = "0.4", features = ["serde"] }
